Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.4 - 11/28/2011 - Aaron Edwards
----------------------------------------------------------------------
- Update for Pro Sites Level compatibility
- Add textdomain to plugin header to translate plugin description
- Change link field to work with low resolution
- Fix bug with icons css theme
- Update the table rate shipping for international support
- Update chained payments documentation

2.3.2 - 10/28/2011 - Aaron Edwards
----------------------------------------------------------------------
- Add JS to dropdown categories shortcode
- Fix image size in global product listings to be correct
- Fix missing title on product list pages
- Fix title incompatibility with Genesis & Catalyst framework based themes
- Style fixes to icons CSS theme
- Fix double email for digital only orders

2.3.1 - 10/17/2011 - Aaron Edwards
----------------------------------------------------------------------
- Still send shipped notification email for download only carts (for gateways with delayed paid confirmations)
- Fix cart widget title getting removed on AJAX add to cart for some themes
- Combine forms on the edit order screen to avoid confusion when saving
- Add back in Inventory Threshold option
- Add action hook to mp_order_status() template function.
- Add points and credits currency types

2.3 - 10/11/2011 - Aaron Edwards
----------------------------------------------------------------------
- Add Table Rate shipping plugin
- Fix tax inclusive display in cart widget
- Fix blank gateway select page for download only carts combined with PayPal Express gateway
- Add back email field for download only carts
- Fix graceful degrading of AJAX cart handling
- Adjust PayPal gateway to gracefully handle carts with free products in them

2.2.1 - 10/03/2011 - Aaron Edwards